@@ -107,6 +107,10 @@ class Pry
 
     # @return [Integer] Amount of results that will be stored into out
     attr_accessor :memory_size
+
+    # @return [Proc] The proc that manages ^D presses in the REPL.
+    #   The proc is passed the current eval_string and the current pry instance.
+    attr_accessor :control_d_handler
   end
 end
 
