@@ -12,6 +12,9 @@
 * changed `exit` command so that it now called Kernel#exit (after saving history)
 * 'quit' now behaves like 'exit-all' (and aliased to exit-all) - it breaks out of the repl loop and sets empties the binding_stack
 * 'cd ..' just pops a binding off the binding_stack with special behaviour when only one binding in stack - it breaks out of the repl loop
+* show-method and show-doc now accept multiple method names
+* control_d hook added (Pry.config.control_d_handler)
+* behaviour of ^d is now to break out of current expr if in multi-line expr, or break out of current context if nested, or break out of pry repl loop if at top-level
 
 */7/2011 version 0.9.3
 * cat --ex (cats 5 lines above and below line in file where exception was raised)
